--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 				<!-- Last Published: 2024-12-12 21:07:45 +0000 UTC -->
 				<html lang="en">
 					<head>
-						<title>New Landing page</title>
+						<title>Flash Sale</title>
 						<meta charset="UTF-8">
 						<meta http-equiv="X-UA-Compatible" content="ie=edge">
 						<meta name="description" content="">
